Added my Home Page
Added my home page to the site.

--- a/project-one/index 2.html
+++ b/project-one/index 2.html
@@ -8,3 +8,7 @@
     <<h1>Anna's Comm 326 - Site</h1>
   </body>
 </html>
+
+<<body>
+  <a href="project-one/exercise-2.html"> link to exercise 1</a>
+</body>
