--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Anna's Comm 326: Creating for the Web Site</title>
   </head>
   <body>
-    <<h1>Anna's Comm 326 - Site</h1>
+    <h1>Anna's Comm 326 - Site</h1>
   </body>
 </html>
