--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1> <span class="vcd-03">COMM 326:</span> Creating for the Web</h1>
   </header>
   <div class="spacing-box">
-    <img src='project-one/assets/rose.jpg' alt="">
+    <img src="project-one/assets/rose.jpg" alt="">
 </div>
 <section class="project-one">
   <div class="spacing-box">
