--- a/project-one/index.html
+++ b/project-one/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 
   <head>
+
     <meta charset="utf-8">
     <title>Anna's Letterform</title>
     <link rel="stylesheet" href="https://use.typekit.net/gkq6odh.css">
@@ -13,12 +14,24 @@
     <div id= "container">
       <section class="letter-container">
       <h1>R</h1>
+
       <section class="letter-container2">
-      <img src="assets/letter-analysis2.svg" alt="Analysis of the capital R in Red Rose"
+        <center>
+        <img src="assets/image-3.png" alt="" width:"400" height="300">
+      <img src="assets/image-1.png" alt="" width:"400" height="300">
+      <img src="assets/letter-analysis2.svg" alt="Analysis of the capital R in Red Rose" class=""
+
     </section>
+    </center>
+<div id="footer-rectangle-four"> </div>
+<div id="footer-rectangle-five"> </div>
+<div id="footer-rectangle-six"> </div>
+    <div id="footer-rectangle-three">
+    </div>
     <section class="second row">
 
       <div class="body-copy">
+
             <h2>Red Rose / Regular</h2>
             <p>Red Rose was designed by Jaikishan Patel and released in 2018
               by his
@@ -43,7 +56,7 @@
 </section>
 <!-- button citation section -->
   <div class="button row">
-    <button type="button" name="button">Tap me</button>
+    <button type="button" name="button">Analysis</button>
   <div class="sources">
     <h3>Sources</h3>
 <div>
@@ -59,11 +72,14 @@
 </div>
 <!-- footer section -->
 <footer class="flexybox">
-      <img id="my-photo" src="assets/anna-resize.jpg" alt="">
+      <img id="my-photo" src="assets/anna-resize.jpg" alt="" width="200" height="200" alt="" class="">
       <div class="personal-title">
   <h3>Anna Smucker</h3>
   <h4>Third Year Graphic Design Major</h4>
 </div>
 </footer>
+<div id="footer-rectangle-one">
+</div>
+<div id="footer-rectangle-two"> </div>
 </body>
 </html>
