--- a/project-one/index.html
+++ b/project-one/index.html
@@ -8,26 +8,30 @@
     <link rel="stylesheet" href="https://use.typekit.net/gkq6odh.css">
     <link href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="assets/styles.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- toggle.js MUST come after the Google API otherwise it will not work. The browser window can't read toggle.js without loading the Google API first. -->
+  <script src="assets/toggle.js" charset="utf-8"></script>
   </head>
 
   <body>
     <div id= "container">
       <section class="letter-container">
       <h1>R</h1>
-
-      <section class="letter-container2">
-        <center>
-        <img src="assets/image-3.png" alt="" width:"400" height="300">
-      <img src="assets/image-1.png" alt="" width:"400" height="300">
-      <img src="assets/letter-analysis2.svg" alt="Analysis of the capital R in Red Rose" class=""
-
-    </section>
+      <img src="assets/letter-analysis2.svg" alt="Analysis of the capital R in Red Rose">
+</section>
+<center>
+      <div id ="letter-container2">
+        <img src="assets/image-3.png" alt="" width:"400" height="350">
+    </div>
+    <div id = "letter-container3">
+      <img src="assets/image-1.png" alt="" width:"400" height="350">
+    </div>
     </center>
 <div id="footer-rectangle-four"> </div>
 <div id="footer-rectangle-five"> </div>
 <div id="footer-rectangle-six"> </div>
-    <div id="footer-rectangle-three">
-    </div>
+<div id="footer-rectangle-three"> </div>
+
     <section class="second row">
 
       <div class="body-copy">
@@ -72,9 +76,9 @@
 </div>
 <!-- footer section -->
 <footer class="flexybox">
-      <img id="my-photo" src="assets/anna-resize.jpg" alt="" width="200" height="200" alt="" class="">
+      <img id="my-photo" src="assets/image-14.svg" alt="" width="200" height="200" alt="" class="">
       <div class="personal-title">
-  <h3>Anna Smucker</h3>
+  <h4>Anna Smucker</h4>
   <h4>Third Year Graphic Design Major</h4>
 </div>
 </footer>
