--- a/project-one/index.html
+++ b/project-one/index.html
@@ -6,19 +6,22 @@
     <meta charset="utf-8">
     <title>Anna's Letterform</title>
     <link rel="stylesheet" href="https://use.typekit.net/gkq6odh.css">
-    <link href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;700&display=swap" >
 <link rel="stylesheet" href="assets/styles.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- toggle.js MUST come after the Google API otherwise it will not work. The browser window can't read toggle.js without loading the Google API first. -->
-  <script src="assets/toggle.js" charset="utf-8"></script>
+  <script src="assets/toggle.js"></script>
   </head>
 
   <body>
     <div id= "container">
       <section class="letter-container">
       <h1>R</h1>
-      <img src="assets/letter-analysis2.svg" alt="Analysis of the capital R in Red Rose">
+      <img id="letter-analysis2" src="assets/letter-analysis2.svg" alt="position: absolute;
+          top: 207px;
+          right: 596px;"="">
 </section>
+</div>
 <center>
       <div id ="letter-container2">
         <img src="assets/image-3.png" alt="" width:"400" height="350">
@@ -59,8 +62,8 @@
   </div>
 </section>
 <!-- button citation section -->
-  <div class="button row">
-    <button type="button" name="button">Analysis</button>
+  <div class='button row'>
+    <button id='toggle_button' type="button" name="button"> Analysis</button>
   <div class="sources">
     <h3>Sources</h3>
 <div>
