--- a/project-one/index.html
+++ b/project-one/index.html
@@ -22,14 +22,14 @@
           right: 596px;"="">
 </section>
 </div>
-<center>
+<section class="center-container">
       <div id ="letter-container2">
         <img src="assets/image-3.png" alt="" width:"400" height="350">
     </div>
     <div id = "letter-container3">
       <img src="assets/image-1.png" alt="" width:"400" height="350">
     </div>
-    </center>
+  </section>
 <div id="footer-rectangle-four"> </div>
 <div id="footer-rectangle-five"> </div>
 <div id="footer-rectangle-six"> </div>
