--- a/project-one/index.html
+++ b/project-one/index.html
@@ -7,7 +7,7 @@
     <title>Anna's Letterform</title>
     <link rel="stylesheet" href="https://use.typekit.net/gkq6odh.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;700&display=swap" >
-<link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="assets/styles.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- toggle.js MUST come after the Google API otherwise it will not work. The browser window can't read toggle.js without loading the Google API first. -->
   <script src="assets/toggle.js"></script>
@@ -15,42 +15,38 @@
 
   <body>
     <div id= "container">
-      <section class="letter-container">
+      <header>
+        <img class="roses" src="assets/image-3.png" alt="">
+        <div class="letter-container">
       <h1>R</h1>
-      <img id="letter-analysis2" src="assets/letter-analysis2.svg" alt="position: absolute;
-          top: 207px;
-          right: 596px;"="">
-</section>
+      <img id="letter-analysis2" src="assets/letter-analysis2.svg" alt="">
+    </div>
+    <img class= "roses" src="assets/image-1.png" alt="">
+</header>
+
+<div id="lines-below-header">
+  <div class="thin-brown-line"> </div>
+  <div class="thin-brown-line"> </div>
+  <div class="thin-brown-line"> </div>
 </div>
-<section class="center-container">
-      <div id ="letter-container2">
-        <img src="assets/image-3.png" alt="" width:"400" height="350">
-    </div>
-    <div id = "letter-container3">
-      <img src="assets/image-1.png" alt="" width:"400" height="350">
-    </div>
-  </section>
-<div id="footer-rectangle-four"> </div>
-<div id="footer-rectangle-five"> </div>
-<div id="footer-rectangle-six"> </div>
-<div id="footer-rectangle-three"> </div>
+<div id="green-header-rectangle"> </div>
 
     <section class="second row">
 
       <div class="body-copy">
 
-            <h2>Red Rose / Regular</h2>
-            <p>Red Rose was designed by Jaikishan Patel and released in 2018
-              by his
-  independently owned and operated company, MagicType, in Mumbai, India
-  (<a href= "https://www.behance.net/gallery/62056551/Red-Rose-Pro-Free-Font"
-  >Red Rose</a>).
-  Red Rose is an exclusively designed Latin typeface, inspired by the Serifs
-  typeface. Its distinguishing factors are its triangular-shaped serif design
-  and curved strokes near the end of the axes (<a href="https://www.fonts.com/content/learning/fontology/level-1/type-anatomy/type-classifications">Haley</a>).
-  I was drawn to Red Rose because
-  of its unique flared character strokes and medium contrast in stroke weight.</p>
-</div>
+          <h2>Red Rose / Regular</h2>
+          <p>Red Rose was designed by Jaikishan Patel and released in 2018
+            by his
+            independently owned and operated company, MagicType, in Mumbai, India
+            (<a href= "https://www.behance.net/gallery/62056551/Red-Rose-Pro-Free-Font"
+            >Red Rose</a>).
+            Red Rose is an exclusively designed Latin typeface, inspired by the Serifs
+            typeface. Its distinguishing factors are its triangular-shaped serif design
+            and curved strokes near the end of the axes (<a href="https://www.fonts.com/content/learning/fontology/level-1/type-anatomy/type-classifications">Haley</a>).
+            I was drawn to Red Rose because
+            of its unique flared character strokes and medium contrast in stroke weight.</p>
+  </div>
 <div class="character-highlights">
   <span class="left-column"> a </span>
   <span class="right-column"> b </span>
@@ -59,6 +55,10 @@
   <span class="left-column"> e </span>
   <span class="right-column"> f </span>
   <span class="left-column"> g </span>
+  <span class="right-column"> 1 </span>
+  <span class="left-column"> 2 </span>
+  <span class="right-column"> 3 </span>
+  <span class="left-column"> 4 </span>
   </div>
 </section>
 <!-- button citation section -->
@@ -66,7 +66,7 @@
     <button id='toggle_button' type="button" name="button"> Analysis</button>
   <div class="sources">
     <h3>Sources</h3>
-<div>
+    <div>
     <p>Haley, Allan. “Type Classifications", Fonts.com, <a href=
       "https://www.fonts.com/content/learning/fontology/level-1/type-anatomy/type-classifications">
       https://www.fonts.com/content/learning/fontology/level-1/type-anatomy/type-classifications </a>
@@ -88,5 +88,7 @@
 <div id="footer-rectangle-one">
 </div>
 <div id="footer-rectangle-two"> </div>
+</div>
 </body>
+
 </html>
