New changes to project2
Combined all styles into one css

--- a/project2/the-start.html
+++ b/project2/the-start.html
@@ -3,33 +3,29 @@
   <head>
     <meta charset='UTF-8'/>
     <title>The 1975- The Start</title>
-    <link href='start-styles.css' rel='stylesheet'/>
+    <link href='styles.css' rel='stylesheet'/>
   </head>
   <body>
-<div id="container">
-    <div class='header'>
-      <div class='logo'><img src='assets/logo-test/the-1975-logo.jpg'/></div>
-      <ul class='menu'>
-          <ul class= 'home-menu'>
-           <!-- Start of submenu -->
-    </ul>
-    </li>
-<li><a href="menu.html" >Home</a></li>
-        <li><a href='the-start.html'>The Start</a></li>
-        <li><a href='evolution.html'>Evolution</a></li>
-        <li><a href='religion.html'>Religion</a></li>
-        <li><a href='socjustice.html'>Social Justice</a></li>
-      </ul>
-  </div>
-  <div>
-    <h1>
-      <div class='under-header'>
-        <p id= 'the-start'>
-        <img src="the-start2.svg" width="1400" height="500" alt="the-start" x="100" y="90">
-      </p>
-      </div>
-    </h1>
-  </div>
+  <section class="one">
+    <div class="container">
+      <h1> The 1975</h1>
+
+    <nav>
+    <a href="menu.html" >Home</a>
+              <a href='the-start.html'>The Start</a>
+              <a href='evolution.html'>Evolution</a>
+              <a href='religion.html'>Religion</a>
+              <a href='socjustice.html'>Social Justice</a>
+            </nav>
+          </div>
+
+        </section>
+
+        <section class="normal"
+        <div class="container">
+          <h1> THE START </h1>
+        </div>
+</section>
 
   </body>
 </html>
