--- a/project2/evolution.html
+++ b/project2/evolution.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang='en'>
-  <head>
-    <meta charset='UTF-8'/>
-    <title>The 1975- Evolution</title>
-    <link href='start-styles.css' rel='stylesheet'/>
-  </head>
-  <body>
-<div id="container">
-    <div class='header'>
-      <div class='logo'><img src='assets/logo-test/the-1975-logo.jpg'/></div>
-      <ul class='menu'>
-              <ul class= 'home-menu'>
-               <!-- Start of submenu -->
-        </ul>
-        </li>
-    <li><a href="menu.html" >Home</a></li>
-            <li><a href='the-start.html'>The Start</a></li>
-            <li><a href='evolution.html'>Evolution</a></li>
-            <li><a href='religion.html'>Religion</a></li>
-            <li><a href='socjustice.html'>Social Justice</a></li>
-          </ul>
-    </div>
-    <div>
-      <h1>
-        <div class='under-header'>
-          <div class='box2'>
-            <img src='evolution-2.svg' width="1400" height="500" alt="evolution" x="100" y="90"></div>
-        </div>
-      </h1>
 
-  </div>
-  </body>
+<head>
+  <meta charset='UTF-8' />
+  <title>The 1975- Evolution</title>
+  <link href='styles.css' rel='stylesheet' />
+</head>
+
+<body>
+  <section class="one">
+
+    <div class="container">
+      <h1> The 1975</h1>
+
+      <nav>
+        <a href="menu.html">Home</a>
+        <a href='the-start.html'>The Start</a>
+        <a href='evolution.html'>Evolution</a />
+        <a href='religion.html'>Religion</a>
+        <a href='socjustice.html'>Social Justice</a>
+      </nav>
+    </div>
+
+  </section>
+
+  <section class="normal">
+  <div class="container">
+    <h1> EVOLUTION </h1>
+    </div>
+  </section>
+
+</body>
+
 </html>
