--- a/project2/menu.html
+++ b/project2/menu.html
@@ -2,29 +2,33 @@
 <html lang='en'>
   <head>
     <meta charset='UTF-8'/>
-    <title>The 1975 !</title>
-    <link href='menu.css' rel='stylesheet'/>
+    <title>The 1975- Home</title>
+    <link rel="stylesheet" href="https://use.typekit.net/gkq6odh.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap" rel="stylesheet">
+    <link href='styles.css' rel='stylesheet'/>
   </head>
   <body>
-    <div class='header'>
-      <div class='logo'><img src='assets/logo-test/the-1975-logo.jpg'/></div>
-      <ul class='menu'>
-          <ul class= 'home-menu'>
-           <!-- Start of submenu -->
-    </ul>
-    </li>
-<li><a href="menu.html" >Home</a></li>
-        <li><a href='the-start.html'>The Start</a></li>
-        <li><a href='evolution.html'>Evolution</a></li>
-        <li><a href='religion.html'>Religion</a></li>
-        <li><a href='socjustice.html'>Social Justice</a></li>
-      </ul>
+  <section class="one">
+    <div class="container">
+    <h1>The 1975</h1>
+
+    <nav>
+        <a href="menu.html">Home</a>
+        <a href='the-start.html'>The Start</a>
+        <a href='evolution.html'>Evolution</a>
+        <a href='religion.html'>Religion</a>
+        <a href='socjustice.html'>Social Justice</a>
+            </nav>
+          </div>
+
+        </section>
+
+        <section class="normal"
+        <div class="container">
+      <img src="menu-squares.svg" width='1440' height='785' alt="">
+    </img>
     </div>
-    <h1>
-      <div class='under-header'>
-        <div class='boxes'><img src='menu-squares.svg'></div>
-      </div>
-    </h1>
+          </section>
 
   </body>
 </html>
