--- a/project2/socjustice.html
+++ b/project2/socjustice.html
@@ -11,11 +11,11 @@
       <h1> The 1975</h1>
 
     <nav>
-    <a href="menu.html" >Home</a>
-              <a href='the-start.html'>The Start</a>
-              <a href='evolution.html'>Evolution</a>
-              <a href='religion.html'>Religion</a>
-              <a href='socjustice.html'>Social Justice</a>
+      <a id='home' href="menu.html">Home</a>
+      <a id='the-start' href='the-start.html'>The Start</a>
+      <a id='evolution' href='evolution.html'>Evolution</a>
+      <a id='religion' href='religion.html'>Religion</a>
+      <a id='socjustice' class='active' href='socjustice.html'>Social Justice</a>
             </nav>
           </div>
 
