--- a/project-one/exercise2.html
+++ b/project-one/exercise2.html
@@ -1,70 +1,68 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-  <head>
-    <meta charset="utf-8">
-    <title>Exercise 2+3: CSS</title>
-    <link rel="stylesheet" href="https://use.typekit.net/gkq6odh.css">
-    <link href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="assets/styles.css">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Exercise 2+3: CSS</title>
+  <link rel="stylesheet" href="https://use.typekit.net/gkq6odh.css">
+  <link href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/styles.css">
+</head>
 
-  <body>
-    <div id= "container">
-      <section class="letter-container">
+<body>
+  <div id="container">
+    <section class="letter-container">
       <h1>R</h1>
 
     </section>
     <section class="second row">
 
       <div class="body-copy">
-            <h2>Red Rose / Regular</h2>
-            <p>Red Rose was designed by Jaikishan Patel and released in 2018
-              by his
-  independently owned and operated company, MagicType, in Mumbai, India
-  (<a href= "https://www.behance.net/gallery/62056551/Red-Rose-Pro-Free-Font"
-  >Red Rose</a>).
-  Red Rose is an exclusively designed Latin typeface, inspired by the Serifs
-  typeface. Its distinguishing factors are its triangular-shaped serif design
-  and curved strokes near the end of the axes (<a href="https://www.fonts.com/content/learning/fontology/level-1/type-anatomy/type-classifications">Haley</a>).
-  I was drawn to Red Rose because
-  of its unique flared character strokes and medium contrast in stroke weight.</p>
-</div>
-<div class="character-highlights">
-  <span class="left-column"> a </span>
-  <span class="right-column"> b </span>
-  <span class="left-column"> c </span>
-  <span class="right-column"> d </span>
-  <span class="left-column"> e </span>
-  <span class="right-column"> f </span>
-  <span class="left-column"> g </span>
-  </div>
-</section>
-<!-- button citation section -->
-  <div class="button row">
-    <button type="button" name="button">Tap me</button>
-  <div class="sources">
-    <h3>Sources</h3>
-<div>
-    <p>Haley, Allan. “Type Classifications", Fonts.com, <a href=
-      "https://www.fonts.com/content/learning/fontology/level-1/type-anatomy/type-classifications">
-      https://www.fonts.com/content/learning/fontology/level-1/type-anatomy/type-classifications </a>
-    </p>
-<p>Patel, Jaikishan. “Red Rose Pro - Free Font.” Behance, 2017, <a href="
+        <h2>Red Rose / Regular</h2>
+        <p>Red Rose was designed by Jaikishan Patel and released in 2018
+          by his
+          independently owned and operated company, MagicType, in Mumbai, India
+          (<a href="https://www.behance.net/gallery/62056551/Red-Rose-Pro-Free-Font">Red Rose</a>).
+          Red Rose is an exclusively designed Latin typeface, inspired by the Serifs
+          typeface. Its distinguishing factors are its triangular-shaped serif design
+          and curved strokes near the end of the axes (<a href="https://www.fonts.com/content/learning/fontology/level-1/type-anatomy/type-classifications">Haley</a>).
+          I was drawn to Red Rose because
+          of its unique flared character strokes and medium contrast in stroke weight.</p>
+      </div>
+      <div class="character-highlights">
+        <span class="left-column"> a </span>
+        <span class="right-column"> b </span>
+        <span class="left-column"> c </span>
+        <span class="right-column"> d </span>
+        <span class="left-column"> e </span>
+        <span class="right-column"> f </span>
+        <span class="left-column"> g </span>
+      </div>
+    </section>
+    <!-- button citation section -->
+    <div class="button row">
+      <button type="button" name="button">Tap me</button>
+      <div class="sources">
+        <h3>Sources</h3>
+        <div>
+          <p>Haley, Allan. “Type Classifications", Fonts.com, <a href="https://www.fonts.com/content/learning/fontology/level-1/type-anatomy/type-classifications">
+              https://www.fonts.com/content/learning/fontology/level-1/type-anatomy/type-classifications </a>
+          </p>
+          <p>Patel, Jaikishan. “Red Rose Pro - Free Font.” Behance, 2017, <a href="
   https://www.behance.net/gallery/62056551/Red-Rose-Pro-Free-Font">
-  https://www.behance.net/gallery/62056551/Red-Rose-Pro-Free-Font </a> </p>
-</div>
-</div>
-</div>
-<!-- footer section -->
-<footer class="flexybox">
+              https://www.behance.net/gallery/62056551/Red-Rose-Pro-Free-Font </a> </p>
+        </div>
+      </div>
+    </div>
+    <!-- footer section -->
+    <footer class="flexybox">
       <img id="my-photo" src="assets/anna-resize.jpg" alt="">
       <div class="personal-title">
-  <h3>Anna Smucker</h3>
-  <h4>Third Year Graphic Design Major</h4>
-</div>
+        <h3>Anna Smucker</h3>
+        <h4>Third Year Graphic Design Major</h4>
+      </div>
 
-</footer>
+    </footer>
 
 
 </body>
