--- a/project2/evolution.html
+++ b/project2/evolution.html
@@ -14,21 +14,53 @@
       <h1> The 1975</h1>
 
       <nav>
-        <a id='home'  href="menu.html">Home</a>
+        <a id='home' href="menu.html">Home</a>
         <a id='the-start' href='the-start.html'>The Start</a>
         <a id='evolution' class='active' href='evolution.html'>Evolution</a>
         <a id='religion' href='religion.html'>Religion</a>
         <a id='socjustice' href='socjustice.html'>Social Justice</a>
       </nav>
     </div>
-
   </section>
+  <section class="container">
 
-  <section class="normal">
-  <div class="container">
     <h1> EVOLUTION </h1>
-    </div>
+    <section class="white-outline">
+<div class='body-copy'>
+      <h3> The 1975 (self-titled)</h3>
+      <p>
+      In their first self titled album, the 1975 aimed to have album
+      artwork that was both “chic and simple.” Inspired by the Chanel logo,
+      the 1975 created a brand off of a simple neon rectangle in black and
+      white. Their almost 80s vibe also appeared in the rest of the album’s
+      artwork, with photos taken for each song by George Daniel, a member of
+      the band. “We wanted something to look like a brand than a band,” Healy said.
+</p>
+</div>
+    </section>
   </section>
+  <section class='first-album'>
+    <img src="the1975/first-album.png"></img>
+  </section>
+  <section class='grey-outline'>
+  </section>
+  <section class='black-box'> </section>
+  <div class='second-album'>
+    <img src="the1975/second-album.png"> </img>
+  </div>
+  <div class='maroon-box'>
+  </div>
+
+  <section class='third-album'>
+    <img src='the1975/third-album.png' width='300' height='300'></img>
+  </section>
+
+  <section class='second-grey'>
+    <section class='fourth-album'>
+      <img src='the1975/fourth-album.jpg' width='300' height='300'> </img>
+    </section>
+  </section>
+  <section class='yellow-box'> </section>
 
 </body>
 
