--- a/project2/menu.html
+++ b/project2/menu.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
 <html lang='en'>
-  <head>
-    <meta charset='UTF-8'/>
-    <title>The 1975- Home</title>
-    <link rel="stylesheet" href="https://use.typekit.net/gkq6odh.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap" rel="stylesheet">
-    <link href='styles.css' rel='stylesheet'/>
-  </head>
-  <body>
-  <section class="one">
-    <div class="container">
+
+<head>
+  <meta charset='UTF-8' />
+  <title>The 1975- Home</title>
+  <link rel="stylesheet" href="https://use.typekit.net/gkq6odh.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap" rel="stylesheet">
+  <link href='styles.css' rel='stylesheet' />
+</head>
+
+<body>
+  <section class="container">
     <h1>The 1975</h1>
 
     <nav>
-        <a id='home' class='active' href="menu.html">Home</a>
-        <a id='the-start' href='the-start.html'>The Start</a>
-        <a id='evolution' href='evolution.html'>Evolution</a>
-        <a id='religion' href='religion.html'>Religion</a>
-        <a id='socjustice' href='socjustice.html'>Social Justice</a>
-            </nav>
-          </div>
+      <a id='home' class='active' href="menu.html">Home</a>
+      <a id='the-start' href='the-start.html'>The Start</a>
+      <a id='evolution' href='evolution.html'>Evolution</a>
+      <a id='religion' href='religion.html'>Religion</a>
+      <a id='socjustice' href='socjustice.html'>Social Justice</a>
+    </nav>
 
-        </section>
+  </section>
 
-        <section class="normal"
-        <div class="container">
-      <img src="menu-squares.svg" width='1440' height='785' alt="">
+  <section class="container">
+    <img src="menu-squares.svg" width='1440' height='600' alt="">
     </img>
     </div>
-          </section>
+  </section>
 
-  </body>
+</body>
 </html>
