--- a/project2/religion.html
+++ b/project2/religion.html
@@ -1,31 +1,76 @@
 <!DOCTYPE html>
 <html lang='en'>
-  <head>
-    <meta charset='UTF-8'/>
-    <title>The 1975- Religion</title>
-    <link href='styles.css' rel='stylesheet'/>
-  </head>
-  <body>
+
+<head>
+  <meta charset='UTF-8' />
+  <title>The 1975- Religion</title>
+  <link href='styles.css' rel='stylesheet' />
+</head>
+
+<body>
   <section class="one">
     <div class="container">
       <h1> The 1975</h1>
 
-    <nav>
-      <a id='home'href="menu.html">Home</a>
-      <a id='the-start' href='the-start.html'>The Start</a>
-      <a id='evolution' href='evolution.html'>Evolution</a>
-      <a id='religion' class='active' href='religion.html'>Religion</a>
-      <a id='socjustice' href='socjustice.html'>Social Justice</a>
-            </nav>
-          </div>
+      <nav>
+        <a id='home' href="menu.html">Home</a>
+        <a id='the-start' href='the-start.html'>The Start</a>
+        <a id='evolution' href='evolution.html'>Evolution</a>
+        <a id='religion' class='active' href='religion.html'>Religion</a>
+        <a id='socjustice' href='socjustice.html'>Social Justice</a>
+      </nav>
+    </div>
 
-        </section>
+  </section>
 
-        <section class="normal"
-        <div class="container">
-          <h1> Religion </h1>
-        </div>
+  <h1> Religion </h1>
+
+  <section class="blue-box">
+
+  <section class="blue-black-pic">
+    <img src="the1975/blue-black-pic.png" width='400' height="230"> </img>
+  </section>
+  <section class='white-box'>
+<h2> Spirituality and concept of religion </h2>
+
+    <p> In a lot of the 1975’s music, Matty healy goes back and forth in his
+      understanding of religion and spirituality. It is almost a love hate
+      kind of relationship. Having said this, Healy admits to be openly agnostic.
+       Even so, Healy uses his songs as a journal to explain where he's at and
+       reason why he’s struggled in the past with religion. His songs titled “Give Yourself
+       A Try,” “If I Believe You,” as well as “Jesus Christ 2005 God Bless
+       America,” go into a more in depth explanation as to what he believes
+       and why.</p>
+  </section>
 </section>
 
-  </body>
+  <section class="second-blue-box">
+<h3> If I believe you</h3>
+<p> “I’ve got a God-shaped hole/ That’s infected/ And I’m petrified of being
+  alone now,” Healy begins his song. “If I Believe,” is an explanation of Healy’s
+   relationship with religion and the universe. “If I believe, will that make
+   it stop? I’m begging for help/I’m asking you Jesus, show yourself,” Healy sings.
+    He later adds that “I’ll be a child if you exist,” referring to the biblical
+    concept of being a a child of God. In several points in the song, Healy builds
+    off of this concept as he shapes his song to have a more gospel like feel,
+    as he includes a choir of gospel singers in several sections. 
+
+
+</p>
+  </section>
+  <section class='second-white'>
+  </section>
+
+
+  <section class="maroon-youtube-box">
+<iframe src="https://open.spotify.com/embed/track/2J3ajGI1sVj9wnqThJHwPS"
+width="277" height="380" frameborder="0" allowtransparency="true"
+allow="encrypted-media"></iframe>
+<iframe src="https://open.spotify.com/embed/track/3tk5DaXxxUoV7b5nOdCDBv"
+width="277" height="380" frameborder="0" allowtransparency="true"
+allow="encrypted-media"></iframe>
+  </section>
+
+</body>
+
 </html>
