--- a/project2/socjustice.html
+++ b/project2/socjustice.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang='en'>
-  <head>
-    <meta charset='UTF-8'/>
-    <title>The 1975- Social Justice</title>
-    <link href='styles.css' rel='stylesheet'/>
-  </head>
-  <body>
+
+<head>
+  <meta charset='UTF-8' />
+  <title>The 1975- Social Justice</title>
+  <link href='styles.css' rel='stylesheet' />
+</head>
+
+<body>
   <section class="one">
     <div class="container">
       <h1> The 1975</h1>
 
-    <nav>
-      <a id='home' href="menu.html">Home</a>
-      <a id='the-start' href='the-start.html'>The Start</a>
-      <a id='evolution' href='evolution.html'>Evolution</a>
-      <a id='religion' href='religion.html'>Religion</a>
-      <a id='socjustice' class='active' href='socjustice.html'>Social Justice</a>
-            </nav>
-          </div>
+      <nav>
+        <a id='home' href="menu.html">Home</a>
+        <a id='the-start' href='the-start.html'>The Start</a>
+        <a id='evolution' href='evolution.html'>Evolution</a>
+        <a id='religion' href='religion.html'>Religion</a>
+        <a id='socjustice' class='active' href='socjustice.html'>Social Justice</a>
+      </nav>
+    </div>
 
-        </section>
+  </section>
 
-        <section class="normal"
-        <div class="container">
-          <h1> Social Justice </h1>
-        </div>
-</section>
+  <section class="normal">
+     <div class="container">
+    <h1> Social Justice </h1>
+    </div>
+  </section>
 
-  </body>
+</body>
+
 </html>
