--- a/project2/the-start.html
+++ b/project2/the-start.html
@@ -1,31 +1,101 @@
 <!DOCTYPE html>
 <html lang='en'>
-  <head>
-    <meta charset='UTF-8'/>
-    <title>The 1975- The Start</title>
-    <link href='styles.css' rel='stylesheet'/>
-  </head>
-  <body>
+
+<head>
+  <meta charset='UTF-8' />
+  <title>The 1975- The Start</title>
+  <link href='styles.css' rel='stylesheet' />
+</head>
+
+<body>
   <section class="one">
     <div class="container">
       <h1> The 1975</h1>
 
-    <nav>
-      <a id='home' href="menu.html">Home</a>
-      <a id='the-start' class='active' href='the-start.html'>The Start</a>
-      <a id='evolution' href='evolution.html'>Evolution</a>
-      <a id='religion' href='religion.html'>Religion</a>
-      <a id='socjustice' href='socjustice.html'>Social Justice</a>
-            </nav>
-          </div>
+      <nav>
+        <a id='home' href="menu.html">Home</a>
+        <a id='the-start' class='active' href='the-start.html'>The Start</a>
+        <a id='evolution' href='evolution.html'>Evolution</a>
+        <a id='religion' href='religion.html'>Religion</a>
+        <a id='socjustice' href='socjustice.html'>Social Justice</a>
+      </nav>
+    </div>
 
-        </section>
+  </section>
 
-        <section class="normal"
-        <div class="container">
-          <h1> THE START </h1>
-        </div>
+  <section class="normal">
+    <div class="container">
+      <div class="shadowpic">
+        <img src='the1975/shadowpic.jpg' width='516' height='219'></img>
+      </div>
+      <div class="rectangle">
+        <img src='the1975/rectangle-box.png' width='355' height='174'></img>
+      </div>
+      <div class='matty'>
+        <img src='the1975/matty.jpg' width='185' height="174"></img>
+      </div>
+      <div class='history-of-band'>
+        <p> History of the band </p>
+
+        <p> The 1975 are an English pop rock band
+          formed in 2002 in Wilmslow, Cheshire. Now
+          based in Manchester, the band consists of
+          lead vocalist, producer, lyricist and rhythm
+          guitarist Matthew Healy, lead guitarist Adam
+          Hann, bassist Ross MacDonald, and
+          drummer/producer George Daniel. </p>
+
+
+      </div>
+      <!-- <h1> THE START </h1> -->
+
+    </div>
+  </section>
+  <section class='youtube'>
+    <iframe width="480" height="261" src="https://www.youtube.com/embed/rfGwnatzTMM"
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+    gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+  </section>
+  <section class='second-text-box'>
+    <p> The band’s origins trace to their attendance at high school and playing
+      together as teenagers. Gigs organized by a council worker led the band to
+      formally sign with Dirty Hit and Polydor Records. The band opened for
+      several major acts and released a series of extended plays (Facedown, Sex,
+       Music for Cars, IV) throughout 2012 before releasing their self-titled
+       debut album (2013), which included the popular singles “Sex”,
+       “Chocolate”, and “Robbers” and reached number one in the
+      United Kingdom. </p>
+
+      <p>Their second album, I Like It When You Sleep, for You Are So Beautiful
+        yet So Unaware of It (2016), reached No. 1 in the US, UK, Canada,
+        Australia and New Zealand. Following the touring cycle for the record,
+        the band announced their third album under the working title of Music
+        for Cars, before going on hiatus again throughout 2017. </p>
+
+        <p> Returning in 2018, the band announced that the album had evolved
+          into their third campaign cycle, consisting of their third and fourth
+          studio albums. The first, A Brief Inquiry into Online Relationships
+          (2018), was released to widespread critical acclaim, and became their
+          third No. 1 album in the UK. The second, Notes on a Conditional Form,
+          was released in May 2020 and became their fourth consecutive No.
+          1 album in the UK. </p>
+
+        <p> The 1975 has garnered acclaim for their exploration of an eclectic
+          range of genres such as pop rock, synth-pop, R&B, funk rock,
+          electropop, new wave forms of electronic music (such as UK garage,
+          2-step and ambient),and forms of rock music (such as shoegaze,
+          post-punk and post-rock),as well as elements of jazz, soul and gospel.
+           Frontman Matty Healy’s energetic and eccentric stage presence has
+           also garnered acclaim, as has his lyricism due to its deeply
+           personal, self-aware, self-deprecating, and often observational
+           nature; his lyrical analyses of politics, society and culture have
+           been praised, notable in songs such as “Love It If We Made It”,
+           “Loving Someone”, “Sincerity Is Scary”, and “People”. </p>
 </section>
 
-  </body>
+  </section>
+
+</body>
+
 </html>
