--- a/index.html
+++ b/index.html
@@ -15,29 +15,32 @@
     <div class="container">
       <header class="flexybox">
         <h1> Anna Smucker </h1>
-        <h1> <span class="vcd-03">COMM 326:</span> Creating for the Web</h1>
+        <h2> <span class="vcd-03">COMM 326:</span> Creating for the Web</h2>
   </header>
-  <div class="spacing-box">
-    <img src="project-one/assets/rose.jpg" alt="">
-</div>
+
 <section class="project-one">
-  <div class="spacing-box">
 
 <div>
   <h3>
-    <span class="project-number">Project 1:</span>
-     "Letterforms" </h3> </div>
+    <span class="project-number"></span>
+      </h3> </div>
+
    <div class="button-holder">
              <a href="project-one/assets/exercise1.html">Exercise 1: Semantic HTML </a>
              <a href="project-one/exercise2.html"> Exercise 2+3: CSS Styling </a>
               <a href="project-one/assets/creating/ex4_student_file/index.html">Ex 4: Froggie's Code Land</a>
 
              <a href="project-one/index.html">Final Project 1: My Favorite Letterform</a>
+             <a href='project2/new-mockup.pdf'>Project 2: Static Digital Mockup</a>
+             <a href="project2/menu.html"> Project 2: Final Site</a>
+             <div class="spacing-box">
+               <img src="project-one/assets/rose.jpg" alt="">
+             </div>
     </div>
-    </div>
+
 </section>
     </div>
 </body>
 
-</body>
+
 </html>
